--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,15 +1,25 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
-client_id = "1ba98c0b3f64252c4de6b33ec43304cd"
+client_id = "4fe836a86911ce887f1a884061be1872"
 name = "nydhi-loyalty"
 application_url = "https://example.com"
 embedded = true
+organization_id = "4553314"
 
 [build]
 automatically_update_urls_on_dev = true
+include_config_on_deploy = true
 
 [webhooks]
 api_version = "2026-01"
+
+  [[webhooks.subscriptions]]
+  topics = [ "app/scopes_update" ]
+  uri = "/webhooks/app/scopes_update"
+
+  [[webhooks.subscriptions]]
+  topics = [ "app/uninstalled" ]
+  uri = "/webhooks/app/uninstalled"
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
